# school-planner

./: README.md  com.github.nahuelwexd.SchoolPlanner.json  com.github.nahuelwexd.SchoolPlanner.json~  meson.build
data/: com.github.nahuelwexd.SchoolPlanner.appdata.xml.in  com.github.nahuelwexd.SchoolPlanner.desktop.in  com.github.nahuelwexd.SchoolPlanner.gresource.xml  com.github.nahuelwexd.SchoolPlanner.gschema.xml  meson.build
data/ui/: main-window.ui
po/: POTFILES  meson.build
src/: app.vala  main-window.vala  main.vala  meson.build
